pi-parser/test-data/snapshots/pi_parser__tests__parse_binops_float_mult.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  BinOp:
    x:
      node:
        FloatLit:
          negative:
            node: true
            span:
              range:
                start: 0
                end: 1
              file_id: 0
          bits: 32
          val:
            node: 2.13
            span:
              range:
                start: 1
                end: 5
              file_id: 0
      span:
        range:
          start: 0
          end: 5
        file_id: 0
    op: Asterisk
    y:
      node:
        FloatLit:
          negative:
            node: false
            span:
              range:
                start: 6
                end: 7
              file_id: 0
          bits: 32
          val:
            node: 0.25
            span:
              range:
                start: 6
                end: 11
              file_id: 0
      span:
        range:
          start: 6
          end: 11
        file_id: 0
span:
  range:
    start: 0
    end: 11
  file_id: 0

