pi-parser/test-data/snapshots/pi_parser__tests__parse_binops_int_div.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  BinOp:
    x:
      node:
        IntLit:
          negative:
            node: false
            span:
              range:
                start: 0
                end: 1
              file_id: 0
          signed: true
          bits: 32
          val:
            node: 919
            span:
              range:
                start: 0
                end: 3
              file_id: 0
      span:
        range:
          start: 0
          end: 3
        file_id: 0
    op: Slash
    y:
      node:
        IntLit:
          negative:
            node: false
            span:
              range:
                start: 4
                end: 5
              file_id: 0
          signed: true
          bits: 32
          val:
            node: 2779
            span:
              range:
                start: 4
                end: 9
              file_id: 0
      span:
        range:
          start: 4
          end: 9
        file_id: 0
span:
  range:
    start: 0
    end: 9
  file_id: 0

