pi-parser/test-data/snapshots/pi_parser__tests__parse_binops_int_minus.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  BinOp:
    x:
      node:
        IntLit:
          negative:
            node: false
            span:
              range:
                start: 0
                end: 1
              file_id: 0
          signed: true
          bits: 32
          val:
            node: 255
            span:
              range:
                start: 0
                end: 4
              file_id: 0
      span:
        range:
          start: 0
          end: 4
        file_id: 0
    op: Minus
    y:
      node:
        IntLit:
          negative:
            node: false
            span:
              range:
                start: 5
                end: 6
              file_id: 0
          signed: true
          bits: 32
          val:
            node: 28
            span:
              range:
                start: 5
                end: 9
              file_id: 0
      span:
        range:
          start: 5
          end: 9
        file_id: 0
span:
  range:
    start: 0
    end: 9
  file_id: 0

