pi-parser/test-data/snapshots/pi_parser__tests__parse_binops_int_mult.snap
---
source: pi-parser/src/tests.rs
expression: "&expr"
---
node:
  BinOp:
    x:
      node:
        IntLit:
          negative:
            node: false
            span:
              range:
                start: 0
                end: 1
              file_id: 0
          signed: true
          bits: 32
          val:
            node: 9
            span:
              range:
                start: 0
                end: 6
              file_id: 0
      span:
        range:
          start: 0
          end: 6
        file_id: 0
    op: Asterisk
    y:
      node:
        IntLit:
          negative:
            node: false
            span:
              range:
                start: 7
                end: 8
              file_id: 0
          signed: true
          bits: 32
          val:
            node: 250
            span:
              range:
                start: 7
                end: 10
              file_id: 0
      span:
        range:
          start: 7
          end: 10
        file_id: 0
span:
  range:
    start: 0
    end: 10
  file_id: 0

